force-app/main/default/objects/Credential_Topic__c/Credential_Topic__c.object-meta.xml
<CustomObject>
    <description>The individual topics for each exam credential</description>
    <label>Credential Topic</label>
    <nameField>
        <label>Credential Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credential Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>