force-app/main/default/objects/Credential_Topic__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <description>The credential this topic relates to</description>
    <label>Credential</label>
    <referenceTo>Credential__c</referenceTo>
    <relationshipLabel>Credential Topics</relationshipLabel>
    <relationshipName>Credential_Topics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>