force-app/main/default/objects/Credential_Topic__c/fields/Weighting__c.field-meta.xml
<CustomField>
    <fullName>Weighting__c</fullName>
    <description>The weighting applied to this topic</description>
    <label>Weighting</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>